--- a/Microelettronica - 3° laboratorio/Conclusions.tex
+++ b/Microelettronica - 3° laboratorio/Conclusions.tex
@@ -1,10 +1,10 @@
-The future of electronics is expected to heavily rely on new semiconductor technologies such as GaN (gallium nitride) and SiC (silicon carbide) for efficient power conversion in energy efficiency applications such as electric cars, photovoltaics, and more.\\\\
-One of the primary reasons why GaN and SiC are considered superior to traditional silicon semiconductors for power conversion is their wider bandgap. The larger energy gap between the valence and conduction bands in GaN and SiC enables them to handle higher voltages and operate at higher temperatures with lower losses and higher efficiency.\\\\
-In addition to their high efficiency, GaN and SiC also offer a number of other advantages that make them well-suited for future electronics, including:
+L'espansione dei campi di applicazione dei semiconduttori è strettamente collegato all'incremento della complessità dei circuiti e della potenza necessaria per il loro funzionamento.\\
+Tuttavia al tempo stesso si sta verificando un  aumento indesiderato dei costi di produzione e funzionamento insieme a una richiesta sempre più stringente di ridurre i gas serra. Questi requisiti contrastanti rende sempre più necessario l'aumento dell'efficienza dei dispositivi elettronici.\\
+Un settore in cui questi fattori sono particolarmente sentiti è quello dei convertitori di potenza, estremamente importanti in una vasta gamma di applicazioni. L'efficienza di questi sistemi è molto legata ai transistor utilizzati, che hanno il ruolo di controllare il flusso di corrente verso il carico, le cui caratteristiche spesso determinano dissipazioni non trascurabili di energia.\\Questo ha spinto la ricerca e lo sviluppo di nuove tecnologie a base di silicio e di nuovi materiali ad ampia banda proibita, come il nitruro di gallio (GaN) e il carburo di silicio (SiC).I dispositivi costruiti con questi nuovi materiali offrono notevoli vantaggi, elencati in seguito 
 \begin{itemize}
-    \item \textbf{Higher power density}: The wider bandgap of GaN and SiC allows for higher electric fields, enabling the development of smaller and lighter power electronic systems.
-    \item \textbf{Higher temperature operation}: GaN and SiC devices can operate at higher temperatures than silicon devices, which reduces the need for cooling systems and improves the reliability of power electronic systems.
-    \item \textbf{Higher frequency operation}: The faster switching speed of GaN and SiC devices allows for higher frequency operation, enabling the design of more compact and efficient power converters.
-    \item \textbf{Lower system cost}: The smaller size, reduced cooling requirements, and higher efficiency of GaN and SiC devices can lead to lower system costs in power conversion applications.
+    \item  Funzionamento a \textbf{frequenza più elevata}: i dispositivi in GaN e SiC hanno una maggiore velocità di commutazione che permette di lavorare a frequenze più elevate, consentendo la progettazione di sistemi più efficienti e compatti.
+    \item  Funzionamento a \textbf{temperature più elevate}: i dispositivi in GaN e SiC possono funzionare a temperature più elevate rispetto alle controparti in silicio, il che riduce la necessità di grossi sistemi di raffreddamento con un notevole risparmio nei costi e un miglioramento nell'affidabilità dei sistemi elettronici di potenza. 
+    \item  Maggiore \textbf{densità di potenza}: i transistor in GaN e SiC hanno una larghezza di banda più ampia consentendo l'utilizzo di campi elettrici più elevati, di conseguenza facilita la progettazione di sistemi elettronici di potenza più piccoli e leggeri.
 \end{itemize}
-Overall, the unique properties of GaN and SiC make them well-suited for the development of high-performance, energy-efficient electronics in a variety of applications. As research continues to advance in these areas, we can expect to see further adoption and integration of these advanced semiconductor technologies in the future of electronics.
+I SiC e i GaN si differenziano nei loro punti di forza. In particolare i Sic sono migliori in applicazioni ad alta temperatura e alta tensione, mentre i GaN in quelle dove la densità di potenza ha priorità assoluta. \\\\ Si può facilmente concludere che questi nuovi materiali presentano vantaggi non trascurabili e che il futuro della microelettronica verterà sull'utilizzo  delle tecnologie dei semiconduttori al Nitruro di Gallio (GaN) e al Carburo di Silicio (SiC), in particolare nei campi di applicazione dove l'efficienza energetica e di spazio sono di primaria importanza.\cite{GaNSiCTexInstru}\cite{InfineonWide}
+\printbibliography
