Add arduino code

--- a/Microelettronica - 4° laboratorio/es1.tex
+++ b/Microelettronica - 4° laboratorio/es1.tex
@@ -67,7 +67,7 @@ Dopo aver montato lo specchio di corrente (Figura \ref{fig:CurrentMirror1}) sull
 Si può riscontrare una minima differenza fra i due valori di corrente, data dalle tolleranze tra i componenti.
 \clearpage
 \subsection{Risultati laboratorio: seconda parte}
-Per questa parte è stato scollegato lo specchio di corrente per evitare l'inutile riscaldamento dei transistor durante le misure. Abbiamo quindi montato il filtro e il preamplificatore in Figura \ref{fig:PreAmp1}
+Successivamente si è proceduto ad analizzare lo stadio di filtraggio ed amplificazione del segnale. Per questa parte è stato scollegato lo specchio di corrente per evitare l'inutile riscaldamento dei transistor durante le misure. Abbiamo quindi montato il filtro e il preamplificatore in Figura \ref{fig:PreAmp1}
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\linewidth]{images/PreAmp1.png}
