--- a/Microelettronica - 4° laboratorio/es2.tex
+++ b/Microelettronica - 4° laboratorio/es2.tex
@@ -19,18 +19,18 @@ Il generatore di forma d'onda è stato impostato con il seguente segnale:
 \clearpage
 \subsection{Procedura di valutazione e risultati}
 Dopo aver acceso l'alimentazione, l'oscilloscopio è stato impostato in modo da visualizzare il segnale di ingresso e il segnale di uscita. Il potenziometro che regola il volume è stato regolato in modo di raggiungere un'ampiezza di $1V_{pp}$ sul segnale di uscita.\\
-Si è proseguito a misurare i due segnali con l'oscilloscopio, le cui forme d'onda sono riportare in Figura \ref{fig:scope_9} 
+Le forme d'onda visualizzate sono riportare in Figura \ref{fig:scope_9} 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.7\linewidth]{images/scope_9.png}
+    \includegraphics[width=0.75\linewidth]{images/scope_9.png}
     \caption{Segnali di ingresso e uscita dell'amplificatore in classe B}
     \label{fig:scope_9}
 \end{figure}
-Si è proseguito misurando, attraverso i cursori dell'oscilloscopio, il tempo morto dovuto alla distorsione di crossover.
+Si è proseguito con la misura del tempo morto dovuto alla distorsione di crossover.
 \begin{equation*}
     \text{Dead time} = 503.125\mu s
 \end{equation*}
-risultato piùttosto rilevante, considerato che la forma d'onda data in ingresso ha periodo di $T=3\text{ms}$. Si riporta in Figura \ref{fig:scope_11} il dettaglio della distorsione di crossover
+Esso è risultato piuttosto rilevante, considerato che la forma d'onda data in ingresso ha periodo di $T=3\text{ms}$. Si riporta in Figura \ref{fig:scope_11} il dettaglio della distorsione di crossover
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\linewidth]{images/scope_11.png}
@@ -38,6 +38,6 @@ risultato piùttosto rilevante, considerato che la forma d'onda data in ingresso
     \label{fig:scope_11}
 \end{figure}
 \subsubsection{Lettore MP3}
-Come spiegato nella prima esperienza, si deciso di utilizzare una resistenza di 8$\Omega$ al posto dell'altoparlante, quindi non si è potuto svolgere la prova della riproduzione di una traccia audio. L'obiettivo era quello di sentire l'effetto della distorsione di crossover.
+Come spiegato nella prima esperienza, si è deciso di utilizzare una resistenza di 8$\Omega$ al posto dell'altoparlante, quindi non si è potuto svolgere la prova della riproduzione di una traccia audio. L'obiettivo era quello di sentire l'effetto della distorsione di crossover.
 \subsubsection{Commenti}
 Le prestazioni di questo amplificatore sono buone, anche se con qualche compromesso. Infatti a livello teorico il rendimento è molto alto, ci sono poce dispersioni di potenza. Come contro, questo circuito ha una distorsione del segnale di uscita decisamente elevata.
