--- a/Microelettronica - 4° laboratorio/es3.tex
+++ b/Microelettronica - 4° laboratorio/es3.tex
@@ -18,9 +18,9 @@ Attraverso l’implementazione della retroazione si ottiene l’effetto di atten
     \begin{tabular}{|c|c|}
         \hline
         Integrato&Slew rate\\\hline
-        TL082&$13v/\mu s$\\\hline
-        LM741&$0.5v/\mu s$\\\hline
-        LM1458&$0.5v/\mu s$\\\hline
+        TL082&$13\text{ v/}\mu\text{s}$\\\hline
+        LM741&$0.5\text{ v/}\mu\text{s}$\\\hline
+        LM1458&$0.5\text{ v/}\mu\text{s}$\\\hline
     \end{tabular}
     \caption{Slew rate degli integrati}
     \label{tab:slewrate}
@@ -35,14 +35,14 @@ Il generatore di forma d'onda è stato impostato con il seguente segnale:
 \end{itemize}
 \subsection{Procedura di valutazione e risultati}
 Dopo l'accensione dell'alimentazione, l'oscilloscopio è stato impostato in modo da visualizzare il segnale di ingresso e il segnale di uscita. Il potenziometro che regola il volume è stato regolato in modo che il segnale di uscita raggiunga un'ampiezza di $1V_{pp}$.\\\\
-In Figura \ref{fig:scope_12} la relativa forma d'onda dei segnali di ingresso e uscita
+In Figura \ref{fig:scope_12} si possono vedere le forme d'onda dei segnali di ingresso e uscita
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\linewidth]{images/scope_12.png}
     \caption{Segnali di ingresso e uscita dell'amplificatore in classe B con retroazione}
     \label{fig:scope_12}
 \end{figure}
-Si è proseguito misurando, attraverso i cursori dell’oscilloscopio, l’effetto della distorsione di crossover. Tuttavia, come si vede in Figura \ref{fig:scope_13} l'effetto di crossover è stato completamente eliminato dalla nuova configurazione del circuito.
+Si è proseguito misurando, attraverso i cursori dell’oscilloscopio, l’effetto della distorsione di crossover. Tuttavia, come si vede in Figura \ref{fig:scope_13}, esso è stato completamente eliminato dalla nuova configurazione del circuito.
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.7\linewidth]{images/scope_13.png}
